# trajectory_from_roadmatrix

./: CMakeLists.txt  README.md
include/: trajectory_from_roadmatrix.h  trajectory_from_roadmatrix_impl.h
src/: interface.cpp  trajectory_from_roadmatrix.cpp  trajectory_from_roadmatrix_impl.cpp  trajectory_from_roadmatrix_impl_test.cpp
